TASQ-369: Refactor account.active_timer, store in two fields instead obj array . Improves searching TASQ-335: Fix overlapping active task footer on side menu toggle

--- a/src/main/webapp/resources/css/custom.css
+++ b/src/main/webapp/resources/css/custom.css
@@ -16,6 +16,9 @@
 .big > .main-container{
     margin-left: 35px;
 }
+.big > .footer-time{
+    margin-left: 35px;
+}
 
 .hidden {
     visibility: hidden;
